--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        // Add TMDB API Key from local.properties
+        buildConfigField "String", "TMDB_API_KEY", "\"${project.findProperty('TMDB_API_KEY')}\""
     }
 
     buildTypes {
@@ -35,6 +38,7 @@ android {
     }
     buildFeatures {
         compose true
+        buildConfig true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.1'
@@ -47,16 +51,31 @@ android {
 }
 
 dependencies {
-
+    // Core Android
     implementation libs.androidx.core.ktx
     implementation libs.androidx.lifecycle.runtime.ktx
     implementation libs.androidx.activity.compose
+    
+    // Compose
     implementation platform(libs.androidx.compose.bom)
     implementation libs.androidx.ui
     implementation libs.androidx.ui.graphics
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
-    implementation libs.androidx.constraintlayout.compose.android
+
+    
+    // Retrofit + Gson
+    implementation libs.retrofit
+    implementation libs.gson
+
+    // Coil for image loading
+    implementation libs.coil
+    
+    // ViewModel + Coroutines
+    implementation libs.viewmodel.compose
+    implementation libs.coroutines
+    
+    // Testing
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
