* Interface TMDbApi.kt (searchMovies + getMovieDetails)   * Modèles de données :     - MovieResponse.kt (pour /search/movie)     - MovieDetailsResponse.kt (pour /movie/{id}) - Gestion des erreurs :   * Classe ResultWrapper (Success/Error/Loading)   * Intercepteur réseau basique

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ retrofit = "2.9.0"
 coil ="2.5.0"
 viewmodelCompose = "2.6.2"
 coroutines = "1.7.3"
+interceptor ="4.9.0"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,6 +35,8 @@ gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref 
 coil = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewmodelCompose" }
 coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
+interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "interceptor" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
