--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     // Retrofit + Gson
     implementation libs.retrofit
     implementation libs.gson
+    implementation libs.interceptor
 
     // Coil for image loading
     implementation libs.coil
